# gioibon

./: .gitignore  Makefile  bs-config.js  index.html  manifest.webmanifest  package-lock.json  package.json  pyproject.toml  registerSW.js  sw.js  vite.config.js  workbox-4366fa5b.js  workbox-52333752.js  workbox-7db899c5.js  workbox-87abb7ed.js  workbox-8d77d6fb.js
app-content/: content.db  content_version.json  tts_rules.json
assets/: index-0inxX299.css  index-1Rc028i5.css  index-5nRwL9pc.js  index-6DyEtLWP.css  index-82YUNqMt.css  index-B-HZEh0B.js  index-B4HDTMPk.js  index-BE5Heo6Q.css  index-BESEoJA6.js  index-BK5ztdhp.js  index-BLdY0_R0.css  index-BMBHrrT9.js  index-BQHp6H91.css  index-BQZA_4uT.js  index-BZ9s3ZOS.js  index-Bc0brzrB.css  index-BeNMgS1z.css  index-BfubY6-d.js  index-BhjbDD2O.js  index-Bi9tnqhG.css  index-BjnJ5Pnk.js  index-BsbiyGpZ.css  index-Bt7AJ6z1.js  index-BuDvHkOE.css  index-BxY1T-n1.css  index-BzvKYzY_.js  index-C-ey05Sj.js  index-C0Fpg6-A.js  index-C2uGPTER.js  index-C4XncaXj.css  index-C4dTJK35.js  index-C5i62GsV.js  index-C8FW27Bg.js  index-C8wT166c.css  index-C9km6MZp.css  index-CHgd0Ouu.js  index-CPTktGRr.css  index-CQh7hASv.css  index-CRfZ7k3F.css  index-CZsgZnbt.js  (+209 more)
docs/: database_schema.md  highlight_persistence.md  wasm_sqlite_jetsam_ios_crash.md
libs/: wa-sqlite-async.wasm
scripts/: convert_viet_md_to_tsv.py  fix_tsv_quotes.py  generate_audio_sentences.py  generate_pwa_icons.py  generate_subset_font.py  simple_server.py
src/: __init__.py  main.py
tests/: test_tts_hash.mjs  test_tts_hash.py
web/: .pcode.toml  index.html  (+1 more)
(+96 files in other folders)
