# Path: pyproject.toml
[project]
name = "tung-gioi-bon"
version = "0.1.0"
description = "Web app for memorizing Bhikkhu Patimokkha with TTS support"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "mutagen>=1.47.0"
]

[project.scripts]
gioibon = "src.main:cli"

[tool.setuptools]
packages = ["src"]