# Path: pyproject.toml
[project]
name = "gioibon"
version = "0.1.0"
description = "Web app for memorizing Bhikkhu Patimokkha with TTS support"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "mutagen>=1.47.0"
]

[project.scripts]
gioibon = "src.main:cli"


[tool.pcode]

clean_extensions = ["py", "sh", "zsh"]

extensions = ["", "bash", "cfg", "cfg.py", "gitignore", "ini", "js", "json", "md", "py", "sh", "template", "toml", "ts", "txt", "xml", "yaml", "yml", "zsh", "css", "html", "htm"]

format_extensions = ["py"]

ignore = [".DS_Store", ".git", ".hg", ".pcode.toml", ".ruff_cache", ".svn", ".venv", "__pycache__", "venv", "/web/libs"]

include = []

output_dir = "~/Documents/code.context"

[tool.setuptools]
packages = ["src"]